src/test/ui/consts/control-flow/drop-failure.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-failure.rs:7:9
   |
LL |     let x = Some(Vec::new());
   |         ^ constants cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-failure.rs:20:9
   |
LL |     let vec_tuple = (Vec::new(),);
   |         ^^^^^^^^^ constants cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-failure.rs:28:9
   |
LL |     let x: Result<_, Vec<i32>> = Ok(Vec::new());
   |         ^ constants cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop-failure.rs:38:9
   |
LL |     let mut tmp = None;
   |         ^^^^^^^ constants cannot evaluate destructors

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0493`.
